# cam-calib

./: README.md
mono_calib/: CMakeLists.txt  mono_calib.cpp
mono_calib/result/: left_calib_result.txt  right_calib_result.txt
mono_calib/scripts/: mono_calib.py  mono_calib_result.py
stereo_calib/: CMakeLists.txt  stereo_calib.cpp  stereo_calib_ex1.cpp  stereo_calib_example.cpp
stereo_calib/result/: extrinsics.yml  intrisics.yml
stereo_calib/scripts/: stereo_calib.py  stereo_calib_result.py
